Set default value to ORIGIN
Co-authored-by: pierpaolo.didato@emeal.nttdata.com